--- a/task-1/styles.css
+++ b/task-1/styles.css
@@ -20,10 +20,12 @@ header{
 .menu-item{
     padding: 10px 20px;
     margin: 0;
-    width: 318px;
     list-style: none;
     display: flex;
     justify-content: left;
+    align-items: stretch;
+    width: 100%;
+    box-sizing: border-box;
 }
 .menu-item-link{
  text-decoration: none;
